# cardano-deposit-wallet

./: .gitignore  404.html  CONTRIBUTING.md  README.md  SECURITY.md  docs-index.html  flake.nix  index.html  justfile  print.html  searchindex.js  searchindex.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
CI/: flake.nix
CI/pipelines/: main.yml  release.yml
CI/scripts/: add-release-commits.sh  build-docker-image.sh  build-docs.sh  check-nix-format.sh  check-shell-format.sh  nix-format.sh  push-release-artifacts.sh  push-release.sh  run-md.sh  shell-format.sh  smoke-test-docker-image.sh  smoke-test-linux-package.sh  smoke-test-package.sh  trigger-main-from-release.sh
CI/scripts/rewrite-libs/: rewrite-libs.cabal
CI/scripts/rewrite-libs/src/: rewrite-libs.hs
CI/scripts/runmd/: Main.hs  README.md  flake.nix  runmd.cabal
CI/templates/: release.md
code/: cabal.project  cardano-deposit-wallet.nix  flake.nix  justfile
code/exe/: cardano-deposit-wallet-exe.cabal  cardano-deposit-wallet-transition.cabal
code/exe/app/: cardano-deposit-wallet.hs
code/exe/lib/Cardano/Wallet/Deposit/: Application.hs  CLI.hs
code/exe/lib/Cardano/Wallet/Deposit/Application/: CLI.hs  Logging.hs  Options.hs
code/exe/lib/Cardano/Wallet/Deposit/Application/Commands/: Serve.hs  Version.hs
code/lib/: cardano-deposit-wallet.cabal
code/lib/rest/Cardano/Wallet/Deposit/: REST.hs
code/lib/src/Cardano/Wallet/Deposit/: Map.hs  Read.hs  Time.hs  Write.hs
code/lib/src/Cardano/Wallet/Deposit/IO/: DB.hs  Resource.hs
code/lib/src/Cardano/Wallet/Deposit/Map/: Timed.hs
code/lib/src/Cardano/Wallet/Deposit/Pure/: Submissions.hs  UTxO.hs
code/lib/src/Cardano/Wallet/Deposit/Write/: Keys.hs
code/lib/test/scenario/Test/Scenario/: Blockchain.hs
code/nix/: haskell.nix  project.nix
code/scripts/: bump-constraints.sh
code/ui/: cardano-deposit-wallet-ui.cabal
code/ui/golden/: BIP32Path.json
code/ui/src/Cardano/Wallet/UI/Deposit/: API.hs  Server.hs
code/ui/src/Cardano/Wallet/UI/Deposit/API/: Payments.hs
code/ui/src/Cardano/Wallet/UI/Deposit/API/Deposits/: Deposits.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Handlers/: Addresses.hs  Wallet.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Handlers/Addresses/: Transactions.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Handlers/Deposits/: Customers.hs  TxIds.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Handlers/Payments/: Transaction.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Html/Pages/: Addresses.hs  Page.hs  Wallet.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Html/Pages/Deposits/: Customers.hs  Page.hs  TxIds.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Html/Pages/Payments/: Page.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Server/Payments/: Page.hs
code/ui/src/Cardano/Wallet/UI/Deposit/Types/: Payments.hs
code/ui/src/Cardano/Wallet/UI/Lib/Time/: Direction.hs
code/ui/test/unit/Cardano/Wallet/UI/Deposit/Html/Pages/Payments/: PageSpec.hs
configs/cardano/: refresh.sh
configs/cardano/mainnet/: download.sh
configs/cardano/preprod/: download.sh
configs/cardano/preview/: download.sh
docs/canary/: 404.html  api.html  contributing.html  design.html  examples.html  index.html  installation.html  intro.html  print.html  searchindex.js  searchindex.json  specifications.html  usage.html
docs/canary/design/: Specification.lagda.html  implementation.html  problem.html  requirements.html  roadmap.html  specification.html
docs/canary/design/Specification/: Cardano.lagda.html  Common.lagda.html
docs/canary/design/Specification/Cardano/: Chain.lagda.html  Tx.lagda.html  Value.lagda.html
docs/canary/design/Specification/Wallet/: Payment.lagda.html  UTxO.lagda.html
docs/canary/installation/: docker.html  mithril.html  package.html
docs/rc-0.0.1/: 404.html  api.html  contributing.html  examples.html  index.html  installation.html  print.html  searchindex.js  specifications.html  usage.html
docs/test/: 404.html  api.html  contributing.html  design.html  examples.html  index.html  installation.html  intro.html  print.html  searchindex.js  searchindex.json  specifications.html  usage.html
docs/test/design/: Specification.lagda.html  implementation.html  problem.html  requirements.html  roadmap.html  specification.html
docs/test/design/Specification/: Cardano.lagda.html  Common.lagda.html
docs/test/design/Specification/Cardano/: Chain.lagda.html  Tx.lagda.html  Value.lagda.html  Wallet.html
docs/test/design/Specification/Cardano/Wallet/: Payment.lagda.html  UTxO.lagda.html
docs/test/design/Specification/Wallet/: Payment.lagda.html  UTxO.lagda.html
docs/test/installation/: docker.html  mithril.html  package.html  run.html
docs/test/installation/mithril/: download.html  preprod.html
docs/test/installation/package/: build.html  download.html
docs/test/usage/: installation.html
nix/: devShells.nix  docker-image.nix  linux-artifacts.nix  macos-artifacts.nix  package.nix
run/docker/: docker-compose.yml  run.sh
site/docs/: book.toml
site/docs/src/: SUMMARY.md  api.md  installation.md  intro.md
site/docs/src/design/: Specification.lagda.md  implementation.md  requirements.md
site/docs/src/design/Specification/Cardano/: Wallet.md
site/docs/src/installation/: docker.md  mithril.md  package.md
site/docs/test/: build-and-install-package-with-mithril.yml  build-and-install-package-without-mithril.yml  docker-from-flake.yml  docker-from-release.yml  download-and-install-package.yml  download-mithril.yml
site/landing/: book.toml
site/landing/src/: README.md  SUMMARY.md  docs-index.md
site/site/: docusaurus.config.ts  package-lock.json  package.json
site/site/docs/: api.md  examples.md  intro.md  usage.md
site/site/docs/design/: index.md  problem.md  roadmap.md
site/site/docs/installation/: docker.md  index.md  mithril.md  package.md
site/site/docs/specification/: index.md
site/site/src/components/HomepageFeatures/: index.tsx
site/site/src/css/: custom.css
site/site/src/pages/: index.module.css  index.tsx
(+18 files in other folders)
