cabal-version: 3.4
name:          cardano-deposit-wallet-exe
version:       0.0.1
synopsis:      cardano-deposit-wallet executable
license:       Apache-2.0
author:        hal team
maintainer:    hal@cardanofoundation.org
category:      Crypto
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-exe
  ghc-options:
    -threaded -rtsopts -Wall -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , base
    , cardano-deposit-wallet
    , cardano-deposit-wallet-ui
    , cardano-deposit-wallet:http
    , cardano-deposit-wallet:rest
    , cardano-wallet-exe
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-ui:common
    , contra-tracer
    , network
    , servant-server
    , streaming-commons
    , transformers
    , unliftio
    , warp
    , optparse-applicative
    , http-client
    , fmt
    , text, time, text-class, aeson
    , iohk-monitoring
    , cardano-addresses
    , address-derivation-discovery
    , filepath
    , cardano-wallet-read
    , bytestring
    , directory

  exposed-modules:
    Cardano.Wallet.Deposit.Application
    Cardano.Wallet.Deposit.CLI

executable cardano-deposit-wallet
  import:           language, opts-exe
  main-is:          cardano-deposit-wallet.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base
    , cardano-deposit-wallet-exe
    , cardano-wallet
    , cardano-wallet-exe
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , contra-tracer
    , iohk-monitoring
    , iohk-monitoring-extra
    , lobemo-backend-ekg
    , network-uri
    , optparse-applicative
    , text
    , text-class
    , transformers
    , unliftio
    , with-utf8
