cabal-version:   3.6
name:            cardano-deposit-wallet-ui
version:         0.0.1
synopsis:        Web UI for the cardano-deposit-wallet
license:         Apache-2.0
author:          hal team
maintainer:      hal@cardanofoundation.org
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-files:
  data/english.txt
  data/images/*.png
  golden/*.json

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options:
    -Wall -Wcompat -Wredundant-constraints -Wunused-packages
    -Wunused-imports -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

test-suite unit
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:        -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cardano-addresses
    , cardano-crypto
    , cardano-deposit-wallet
    , cardano-deposit-wallet:rest
    , cardano-wallet-read
    , cardano-wallet-ui:common
    , cardano-wallet-ui:deposit
    , containers
    , contra-tracer
    , hspec
    , hspec-golden-aeson
    , mtl
    , QuickCheck
    , temporary
    , text
    , time

  build-tool-depends: hspec-discover:hspec-discover
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/unit
  main-is:            unit-test.hs
  other-modules:
    Cardano.Wallet.UI.Deposit.Html.Pages.Payments.PageSpec
    Cardano.Wallet.UI.Lib.DiscretizationSpec
    Cardano.Wallet.UI.Lib.Pagination.MapSpec

library
  import:           language, opts-lib
  exposed-modules:
    Cardano.Wallet.UI.Deposit.API
    Cardano.Wallet.UI.Deposit.API.Addresses.Transactions
    Cardano.Wallet.UI.Deposit.API.Common
    Cardano.Wallet.UI.Deposit.API.Deposits.Deposits
    Cardano.Wallet.UI.Deposit.API.Payments
    Cardano.Wallet.UI.Deposit.Handlers.Addresses
    Cardano.Wallet.UI.Deposit.Handlers.Addresses.Transactions
    Cardano.Wallet.UI.Deposit.Handlers.Deposits.Customers
    Cardano.Wallet.UI.Deposit.Handlers.Deposits.Times
    Cardano.Wallet.UI.Deposit.Handlers.Deposits.TxIds
    Cardano.Wallet.UI.Deposit.Handlers.Lib
    Cardano.Wallet.UI.Deposit.Handlers.Payments.Balance
    Cardano.Wallet.UI.Deposit.Handlers.Payments.Transaction
    Cardano.Wallet.UI.Deposit.Handlers.Wallet
    Cardano.Wallet.UI.Deposit.Html.Common
    Cardano.Wallet.UI.Deposit.Html.Pages.About
    Cardano.Wallet.UI.Deposit.Html.Pages.Addresses
    Cardano.Wallet.UI.Deposit.Html.Pages.Addresses.Transactions
    Cardano.Wallet.UI.Deposit.Html.Pages.Deposits.Customers
    Cardano.Wallet.UI.Deposit.Html.Pages.Deposits.Page
    Cardano.Wallet.UI.Deposit.Html.Pages.Deposits.Times
    Cardano.Wallet.UI.Deposit.Html.Pages.Deposits.TxIds
    Cardano.Wallet.UI.Deposit.Html.Pages.Page
    Cardano.Wallet.UI.Deposit.Html.Pages.Payments.Page
    Cardano.Wallet.UI.Deposit.Html.Pages.Wallet
    Cardano.Wallet.UI.Deposit.Server
    Cardano.Wallet.UI.Deposit.Server.Addresses
    Cardano.Wallet.UI.Deposit.Server.Deposits.Customers
    Cardano.Wallet.UI.Deposit.Server.Deposits.Page
    Cardano.Wallet.UI.Deposit.Server.Deposits.Times
    Cardano.Wallet.UI.Deposit.Server.Deposits.TxIds
    Cardano.Wallet.UI.Deposit.Server.Lib
    Cardano.Wallet.UI.Deposit.Server.Payments.Page
    Cardano.Wallet.UI.Deposit.Server.Wallet
    Cardano.Wallet.UI.Deposit.Types.Payments
    Cardano.Wallet.UI.Deposit.Types.Wallet
    Cardano.Wallet.UI.Lib.Discretization
    Cardano.Wallet.UI.Lib.Pagination.Map
    Cardano.Wallet.UI.Lib.Pagination.TimedSeq
    Cardano.Wallet.UI.Lib.Pagination.Type
    Cardano.Wallet.UI.Lib.Time.Direction

  other-modules:    Paths_cardano_deposit_wallet_ui
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-addresses
    , cardano-binary
    , cardano-deposit-wallet
    , cardano-deposit-wallet:rest
    , cardano-slotting
    , cardano-wallet-read
    , cardano-wallet-ui:common
    , containers
    , contra-tracer
    , hashable
    , http-api-data
    , lens
    , lucid
    , monoidal-containers
    , mtl
    , servant
    , servant-server
    , stm
    , text
    , text-class
    , time
    , transformers

  hs-source-dirs:   src
  default-language: Haskell2010
